# compas_acoustics_re

./: pyproject.toml  requirements-dev.txt  requirements.txt
src/compas_acoustics/: analyser.py  model.py  pra_converter.py
src/compas_acoustics/elements/: material.py  source.py
src/compas_acoustics/libraries/: __init__.py  source_library.py
src/compas_acoustics_re/: __init__.py  auraliser.py  constants.py  simulator.py  utilities.py
src/compas_acoustics_re/elements/: component.py  receiver.py  room.py
src/compas_acoustics_re/libraries/: element_library.py  material_library.py
src/compas_acoustics_re/material_output/: test_material.json
tests/: test_acoustic_model.py  test_auraliser.py  test_component.py  test_material_library.py  test_pra_converter.py  test_shoebox_room.py  test_source.py  test_source_library.py
